Добавил стили range-слайдера, элементов блока stars

--- a/catalog.html
+++ b/catalog.html
@@ -111,14 +111,14 @@
                 <legend class="filter__title">Стоимость, ₽:</legend>
                 <div class="range__inputs">
                   <label class="range__label">
-                    <input class="range__input input" type="number" value="0" name="min-price">
+                    <input class="range__input range__input--min input" type="number" value="0" name="min-price">
                   </label>
                   <label class="range__label">
-                    <input class="range__input input" type="number" value="9000" name="max-price">
+                    <input class="range__input range__input--max input" type="number" value="9000" name="max-price">
                   </label>
                 </div>
                 <div class="range__scale">
-                  <div class="range__bar" style="right: 70px; width: 226px;">
+                  <div class="range__bar" style="right: 62px; width: 226px;">
                     <button class="range__toggle range__toggle--min" type="button"></button>
                     <button class="range__toggle range__toggle--max" type="button"></button>
                   </div>
@@ -168,7 +168,12 @@
                 <span class="card__price">От 4000 ₽</span>
                 <a class="card__button button button--basic" href="#">Подробнее</a>
                 <button class="card__button button button--second" type="button">В избранное</button>
-                <span class="card__stars">****</span>
+                <div class="card__stars">
+                  <span class="card__star"></span>
+                  <span class="card__star"></span>
+                  <span class="card__star"></span>
+                  <span class="card__star"></span>
+                </div>
                 <span class="card__rating">Рейтинг: 8,5</span>
               </li>
               <li class="products__item card">
@@ -182,7 +187,12 @@
                 <span class="card__price">От 5000 ₽</span>
                 <a class="card__button button button--basic" href="#">Подробнее</a>
                 <button class="card__button button button--select" type="button">В избранном</button>
-                <span class="card__stars">****</span>
+                <div class="card__stars">
+                  <span class="card__star"></span>
+                  <span class="card__star"></span>
+                  <span class="card__star"></span>
+                  <span class="card__star"></span>
+                </div>
                 <span class="card__rating">Рейтинг: 9,2</span>
               </li>
               <li class="products__item card">
@@ -196,7 +206,11 @@
                 <span class="card__price">От 2500 ₽</span>
                 <a class="card__button button button--basic" href="#">Подробнее</a>
                 <button class="card__button button button--second" type="button">В избранное</button>
-                <span class="card__stars">***</span>
+                <div class="card__stars">
+                  <span class="card__star"></span>
+                  <span class="card__star"></span>
+                  <span class="card__star"></span>
+                </div>
                 <span class="card__rating">Рейтинг: 6,9</span>
               </li>
               <li class="products__item card">
@@ -210,7 +224,10 @@
                 <span class="card__price">От 1500 ₽</span>
                 <a class="card__button button button--basic" href="#">Подробнее</a>
                 <button class="card__button button button--second" type="button">В избранное</button>
-                <span class="card__stars">**</span>
+                <div class="card__stars">
+                  <span class="card__star"></span>
+                  <span class="card__star"></span>
+                </div>
                 <span class="card__rating">Рейтинг: 5,0</span>
               </li>
             </ul>
