Добавил стили состояний кнопкам и элементам footer Также добавил/поправил стили/разметку после просмотра скринкастов по темам 3-4

--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
                 <a class="site-nav__link" href="index.html">Главная</a>
               </li>
               <li class="site-nav__item">
-                <a class="site-nav__link" href="catalog.html" aria-current="page">О седоне</a>
+                <a class="site-nav__link" href="catalog.html" aria-current="page">О Седоне</a>
               </li>
               <li class="site-nav__item">
                 <a class="site-nav__link site-nav__link--current" href="#">Гостиницы</a>
