--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества Седоны</h2>
           <div class="advantages__intro intro">
-            <p class="intro__slogan second-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
-            <p class="intro__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон</p>
+            <p class="intro__slogan second-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+            <p class="intro__text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           </div>
           <ul class="advantages__list">
             <li class="advantages__item">
               <div class="advantages__description">
-                <p class="advantages__title third-title">Настоящий городок </p>
-                <p class="advantages__text">Седона не аттракцион для туристов, там течёт своя жизнь</p>
+                <p class="advantages__title third-title">Настоящий  городок </p>
+                <p class="advantages__text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="advantages__img" src="images/advantage-photo-1.jpg" width="800" height="385"
                 alt="Вид на улицу Седоны">
@@ -86,10 +86,10 @@
                 <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
-            <li class="advantages__item advantages__item--reverse">
+            <li class="advantages__item">
               <div class="advantages__description">
                 <p class="advantages__title third-title">Там есть мост дьявола</p>
-                <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется!</p>
+                <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
               <img class="advantages__img" src="images/advantage-photo-2.jpg" width="800" height="385"
                 alt="Вид на мост Дьявола">
