Добавил стили состояний элементам Элементы форм, header, breadcrumbs, sorting, pagination

--- a/catalog.html
+++ b/catalog.html
@@ -22,10 +22,10 @@
                 <a class="site-nav__link" href="index.html">Главная</a>
               </li>
               <li class="site-nav__item">
-                <a class="site-nav__link" href="catalog.html" aria-current="page">О Седоне</a>
+                <a class="site-nav__link" href="#" >О Седоне</a>
               </li>
               <li class="site-nav__item">
-                <a class="site-nav__link site-nav__link--current" href="#">Гостиницы</a>
+                <a class="site-nav__link site-nav__link--current" href="#" aria-current="page">Гостиницы</a>
               </li>
             </ul>
             <ul class="main-nav__list user-nav">
@@ -39,7 +39,7 @@
                 </a>
               </li>
               <li class="user-nav__item">
-                <a class="user-nav__button button button--basic" href="catalog.html">Хочу сюда!</a>
+                <a class="user-nav__button button button--basic" href="#">Хочу сюда!</a>
               </li>
             </ul>
           </nav>
@@ -55,7 +55,7 @@
                 <a class="breadcrumbs__link" href="index.html"><span class="visually-hidden">Главная</span></a>
               </li>
               <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="catalog.html" aria-current="page">Гостиницы</a>
+                <span class="breadcrumbs__link">Гостиницы</span>
               </li>
             </ol>
             <form class="catalog-header__form filter" action="https://echo.htmlacademy.ru/" method="get"
@@ -84,7 +84,7 @@
                 </ul>
               </fieldset>
               <fieldset class="filter__group">
-                <legend class="filter__title">Тип жилья:</legend>
+                <legend class="filter__title">Тип Жилья:</legend>
                 <ul class="filter__list">
                   <li class="filter__item">
                     <label class="control">
