--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </a>
             <ul class="main-nav__list site-nav">
               <li class="site-nav__item">
-                <a class="site-nav__link site-nav__link--current" href="index.html" aria-current="page">Главная</a>
+                <a class="site-nav__link site-nav__link--current" href="#" aria-current="page">Главная</a>
               </li>
               <li class="site-nav__item">
                 <a class="site-nav__link" href="#">О Седоне</a>
@@ -35,7 +35,7 @@
               </li>
               <li class="user-nav__item">
                 <a class="user-nav__link user-nav__link--like" href="#">
-                  <span class="visually-hidden">Понравилось</span>
+                  <span class="visually-hidden">Понравилось отелей</span>
                   <span class="user-nav__likes-badge">12</span>
                 </a>
               </li>
