--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </a>
             <ul class="main-nav__list site-nav">
               <li class="site-nav__item">
-                <a class="site-nav__link site-nav__link--current" href="#" aria-current="page">Главная</a>
+                <a class="site-nav__link site-nav__link--current" aria-current="page">Главная</a>
               </li>
               <li class="site-nav__item">
                 <a class="site-nav__link" href="#">О Седоне</a>
@@ -109,7 +109,7 @@
             </li>
             <li class="services__item services__item--eat">
               <p class="services__title third-title">Еда</p>
-              <p class="services__description">Всегда заказывайте<br> топовый фирменый бургер, вы не разочаруетесь!</p>
+              <p class="services__description">Всегда заказывайте<br> топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="services__item services__item--gift">
               <p class="services__title third-title">Сувениры</p>
