Добавил /исправил разметку/стили по результатам разбора ДЗ и просмотра скринкаста по теме 4

--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
           <nav class="page-header__nav main-nav">
             <a class="main-nav__logo" href="index.html">
               <img class="main-nav__logo-img" src="images/logo.svg" width="140" height="70"
-                alt="Логотип курорта Седона">
+                alt="Логотип курорта Седона.">
             </a>
             <ul class="main-nav__list site-nav">
               <li class="site-nav__item">
@@ -30,11 +30,11 @@
             </ul>
             <ul class="main-nav__list user-nav">
               <li class="user-nav__item">
-                <a class="user-nav__link user-nav__link--search" href="#"><span class="visually-hidden">Поиск</span></a>
+                <a class="user-nav__link user-nav__link--search" href="#"><span class="visually-hidden">Поиск.</span></a>
               </li>
               <li class="user-nav__item">
                 <a class="user-nav__link user-nav__link--like" href="#">
-                  <span class="visually-hidden">Понравилось</span>
+                  <span class="visually-hidden">Понравилось отелей.</span>
                   <span class="user-nav__likes-badge">12</span>
                 </a>
               </li>
@@ -52,7 +52,7 @@
             <h1 class="catalog-header__title first-title">Гостиницы Седоны</h1>
             <ol class="catalog-header__breadcrumbs breadcrumbs">
               <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="index.html"><span class="visually-hidden">Главная</span></a>
+                <a class="breadcrumbs__link" href="index.html"><span class="visually-hidden">Главная.</span></a>
               </li>
               <li class="breadcrumbs__item">
                 <span class="breadcrumbs__link">Гостиницы</span>
@@ -146,13 +146,13 @@
 
               <div class="sorting__view">
                 <a class="sorting__toggle sorting__toggle--table sorting__toggle--current" href="#">
-                  <span class="visually-hidden">Таблица</span>
+                  <span class="visually-hidden">Таблица.</span>
                 </a>
                 <a class="sorting__toggle sorting__toggle--gallery" href="#">
-                  <span class="visually-hidden">Галерея</span>
+                  <span class="visually-hidden">Галерея.</span>
                 </a>
                 <a class="sorting__toggle sorting__toggle--list" href="#">
-                  <span class="visually-hidden">Список</span>
+                  <span class="visually-hidden">Список.</span>
                 </a>
               </div>
             </header>
@@ -169,10 +169,8 @@
                 <a class="card__button button button--basic" href="#">Подробнее</a>
                 <button class="card__button button button--second" type="button">В избранное</button>
                 <div class="card__stars">
-                  <span class="card__star"></span>
-                  <span class="card__star"></span>
-                  <span class="card__star"></span>
-                  <span class="card__star"></span>
+                  <span class="card__star card__star--four"></span>
+                  <span class="visually-hidden">4 звезды.</span>
                 </div>
                 <span class="card__rating">Рейтинг: 8,5</span>
               </li>
@@ -188,10 +186,8 @@
                 <a class="card__button button button--basic" href="#">Подробнее</a>
                 <button class="card__button button button--select" type="button">В избранном</button>
                 <div class="card__stars">
-                  <span class="card__star"></span>
-                  <span class="card__star"></span>
-                  <span class="card__star"></span>
-                  <span class="card__star"></span>
+                  <span class="card__star card__star--four"></span>
+                  <span class="visually-hidden">4 звезды.</span>
                 </div>
                 <span class="card__rating">Рейтинг: 9,2</span>
               </li>
@@ -207,9 +203,8 @@
                 <a class="card__button button button--basic" href="#">Подробнее</a>
                 <button class="card__button button button--second" type="button">В избранное</button>
                 <div class="card__stars">
-                  <span class="card__star"></span>
-                  <span class="card__star"></span>
-                  <span class="card__star"></span>
+                  <span class="card__star card__star--three"></span>
+                  <span class="visually-hidden">3 звезды.</span>
                 </div>
                 <span class="card__rating">Рейтинг: 6,9</span>
               </li>
@@ -225,8 +220,8 @@
                 <a class="card__button button button--basic" href="#">Подробнее</a>
                 <button class="card__button button button--second" type="button">В избранное</button>
                 <div class="card__stars">
-                  <span class="card__star"></span>
-                  <span class="card__star"></span>
+                  <span class="card__star card__star--two"></span>
+                  <span class="visually-hidden">2 звезды.</span>
                 </div>
                 <span class="card__rating">Рейтинг: 5,0</span>
               </li>
@@ -255,14 +250,14 @@
         </section>
 
         <section class="subscribe" data-test="subscribe">
-          <h2 class="visually-hidden">Форма подписки на рассылку</h2>
+          <h2 class="visually-hidden">Форма подписки на рассылку.</h2>
           <div class="subscribe__wrapper">
             <div class="subscribe__intro intro">
               <p class="intro__slogan second-title">Подпишитесь на рассылку</p>
               <p class="intro__text">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
             </div>
             <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post" id="subscribe-form">
-              <label class="visually-hidden" for="subscribe-form-email">E-mail</label>
+              <label class="visually-hidden" for="subscribe-form-email">E-mail.</label>
               <input class="subscribe__input input" type="email" name="subscribe-email" id="subscribe-form-email"
                 placeholder="Ваш e-mail" required>
               <button class="subscribe__button button button--second button--big" type="submit">Подписаться</button>
@@ -276,17 +271,17 @@
           <ul class="page-footer__list socials">
             <li class="socials__item">
               <a class="socials__link socials__link--vk" href="#">
-                <span class="visually-hidden">Мы в ВКонтакте</span>
+                <span class="visually-hidden">Мы в ВКонтакте.</span>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__link socials__link--tg" href="#">
-                <span class="visually-hidden">Мы в Телеграме</span>
+                <span class="visually-hidden">Мы в Телеграме.</span>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__link socials__link--yt" href="#">
-                <span class="visually-hidden">Мы в Ютубе</span>
+                <span class="visually-hidden">Мы в Ютубе.</span>
               </a>
             </li>
           </ul>
@@ -294,7 +289,7 @@
             <a class="address__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
           <a class="page-footer__copyright" href="#">
-            <span class="visually-hidden">Логотип HTML Academy</span>
+            <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
       </footer>
