--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <nav class="page-header__nav main-nav">
             <a class="main-nav__logo" href="index.html" aria-current="page">
               <img class="main-nav__logo-img" src="images/logo.svg" width="140" height="70"
-                alt="Логотип курорта Седона">
+                alt="Логотип курорта Седона.">
             </a>
             <ul class="main-nav__list site-nav">
               <li class="site-nav__item">
@@ -31,11 +31,11 @@
             </ul>
             <ul class="main-nav__list user-nav">
               <li class="user-nav__item">
-                <a class="user-nav__link user-nav__link--search" href="#"><span class="visually-hidden">Поиск</span></a>
+                <a class="user-nav__link user-nav__link--search" href="#"><span class="visually-hidden">Поиск.</span></a>
               </li>
               <li class="user-nav__item">
                 <a class="user-nav__link user-nav__link--like" href="#">
-                  <span class="visually-hidden">Понравилось отелей</span>
+                  <span class="visually-hidden">Понравилось отелей.</span>
                   <span class="user-nav__likes-badge">12</span>
                 </a>
               </li>
@@ -49,12 +49,12 @@
 
       <main data-test="main">
         <section class="invite" data-test="hero">
-          <h1 class="visually-hidden">Приглашение в Седону</h1>
+          <h1 class="visually-hidden">Приглашение в Седону.</h1>
           <img class="invite__img" src="images/welcome.svg" width="458" height="352"
-            alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks">
+            alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks.">
         </section>
         <section class="advantages" data-test="advantages">
-          <h2 class="visually-hidden">Преимущества Седоны</h2>
+          <h2 class="visually-hidden">Преимущества Седоны.</h2>
           <div class="advantages__intro intro">
             <p class="intro__slogan second-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
             <p class="intro__text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -66,7 +66,7 @@
                 <p class="advantages__text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="advantages__img" src="images/advantage-photo-1.jpg" width="800" height="385"
-                alt="Вид на улицу Седоны">
+                alt="Вид на улицу Седоны.">
             </li>
             <li class="advantages__item">
               <div class="advantages__description">
@@ -92,12 +92,12 @@
                 <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
               <img class="advantages__img" src="images/advantage-photo-2.jpg" width="800" height="385"
-                alt="Вид на мост Дьявола">
+                alt="Вид на мост Дьявола.">
             </li>
           </ul>
         </section>
         <section class="services">
-          <h2 class="visually-hidden">Сервисы в Седоне</h2>
+          <h2 class="visually-hidden">Сервисы в Седоне.</h2>
           <div class="services__intro intro">
             <p class="intro__slogan second-title">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</p>
             <p class="intro__text">Опытный персонал и качественное обслуживание!</p>
@@ -118,7 +118,7 @@
           </ul>
         </section>
         <section class="search" data-test="search">
-          <h2 class="visually-hidden">Бронирование отеля</h2>
+          <h2 class="visually-hidden">Бронирование отеля.</h2>
           <div class="search__intro intro">
             <p class="intro__slogan second-title">Заинтересовались?</p>
             <p class="intro__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц
@@ -127,14 +127,14 @@
           <a class="search__button button button--basic button--big" href="catalog.html">Поиск гостиницы в Седоне</a>
         </section>
         <section class="subscribe subscribe--bg" data-test="subscribe">
-          <h2 class="visually-hidden">Форма подписки на рассылку</h2>
+          <h2 class="visually-hidden">Форма подписки на рассылку.</h2>
           <div class="subscribe__wrapper">
             <div class="subscribe__intro intro">
               <p class="intro__slogan second-title">Подпишитесь на рассылку</p>
               <p class="intro__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
             </div>
             <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post" id="subscribe-form">
-              <label class="visually-hidden" for="subscribe-form-email">E-mail</label>
+              <label class="visually-hidden" for="subscribe-form-email">E-mail.</label>
               <input class="subscribe__input input" type="email" name="subscribe-email" id="subscribe-form-email"
                 placeholder="Ваш e-mail" required>
               <button class="subscribe__button button button--second button--big" type="submit">Подписаться</button>
@@ -148,17 +148,17 @@
           <ul class="page-footer__list socials">
             <li class="socials__item">
               <a class="socials__link socials__link--vk" href="#">
-                <span class="visually-hidden">Мы в ВКонтакте</span>
+                <span class="visually-hidden">Мы в ВКонтакте.</span>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__link socials__link--tg" href="#">
-                <span class="visually-hidden">Мы в Телеграме</span>
+                <span class="visually-hidden">Мы в Телеграме.</span>
               </a>
             </li>
             <li class="socials__item">
               <a class="socials__link socials__link--yt" href="#">
-                <span class="visually-hidden">Мы в Ютубе</span>
+                <span class="visually-hidden">Мы в Ютубе.</span>
               </a>
             </li>
           </ul>
@@ -166,7 +166,7 @@
             <a class="address__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
           <a class="page-footer__copyright" href="#">
-            <span class="visually-hidden">Логотип HTML Academy</span>
+            <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
       </footer>
